--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.12"
+    "prettier-plugin-tailwindcss": "^0.7.1"
   }
 }
